--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^1.0.7",
     "@langchain/core": "^1.1.4",
     "@langchain/textsplitters": "^1.0.1",
+    "@tailwindcss/typography": "^0.5.19",
     "dotenv": "^16.4.5",
     "groq-sdk": "^0.37.0",
     "langchain": "^1.1.5",
@@ -22,6 +23,7 @@
     "puppeteer": "^24.33.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-markdown": "^10.1.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
